[package]
name = "hatena-blog"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.0.1"
reqwest = "0.10.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
tokio = { version = "0.2.11", features = ["full"] }
clap = "2.33.0"
thiserror = "1.0.25"

[dev-dependencies]
anyhow = "1.0.41"
assert_cmd = "0.12.0"
predicates = "1.0.2"
