[package]
name = "hatena-blog"
version = "0.12.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
atom_syndication = "0.10.0"
chrono = "0.4.19"
handlebars = "3.0.1"
quick-xml = "0.22.0"
reqwest = "0.11.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
structopt = "0.3.21"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.41"
assert_cmd = "0.12.0"
mockito = "0.30.0"
predicates = "1.0.2"
