[package]
name = "hatena-blog"
version = "0.13.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
hatena-blog-api = { git = "https://github.com/bouzuya/rust-hatena-blog-api", tag = "0.1.0" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
structopt = "0.3.21"
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.41"
assert_cmd = "2.0.2"
mockito = "0.30.0"
predicates = "2.1.0"
